onboarding screen with basic mvi setup done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     // auth
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    //datastore
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
 }
 
 kapt {
