--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cashcount" >
+    package="com.example.cashcount">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".application.CashCountApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CashCount" >
+        android:theme="@style/Theme.CashCount">
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.auth.ui.activity.AuthActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CashCount" >
+            android:theme="@style/Theme.CashCount">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
