--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         hilt_version = '2.38.1'
         gson_version = '2.9.1'
         coil_version = "2.1.0"
+        datastore_version = "1.0.0"
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
